(rule
 (deps package.json co.scss)
 (targets co.css)
 (action
  (progn
   (run npm i)
   (run npx sass --no-source-map --style compressed co.scss co.css))))

(install
 (package co)
 (section share)
 (files
  (glob_files (*.css with_prefix assets/))
  (glob_files (*.ttf with_prefix assets/))
  (glob_files (*.png with_prefix assets/))
))
