(rule
 (deps package.json co.scss)
 (targets co.css)
 (action
  (progn
   (run npm --silent i)
   (run npx sass --no-source-map --style compressed -q co.scss %{targets}))))

(install
 (package co)
 (section share)
 (files
  (glob_files (*.css with_prefix assets/))
  (glob_files (*.ttf with_prefix assets/))
  (glob_files (*.png with_prefix assets/))
))
